# datahub-demo-ai

./: .env.example  .gitignore  CLAUDE.md  DATAHUB_INGESTION.md  FINAL_SOLUTION_SUMMARY.md  INGESTION_MODES_EXPLAINED.md  NETWORK_FIX_SUMMARY.md  README.md  docker-compose.yml  dump.yaml  ingest.yml  pyproject.toml
databases/datahub/: dataconnections.yaml  structured-properties.yaml
databases/descriptor_dumps/: descriptor-dump.yaml  descriptor-minified-dump.yaml
databases/imports/bank/: domains.csv  glossaries.csv
databases/postgresql/: docker-compose.yaml
databases/postgresql/init-scripts/: 01_init_employees_db.sql  02_init_customer_db.sql  03_init_accounts_db.sql  04_init_insurance_db.sql  05_init_loans_db.sql  06_init_compliance_db.sql
dhub/: __init__.py  cli.py  config.py  db.py
dhub/commands/: datahub.py  datahub_client.py  datahub_display.py  datahub_utils.py  db.py  generate.py  seed.py
dhub/data_generators/: __init__.py  customers.py  employees.py  id_manager.py  loans.py  orchestrator.py  unique_generator.py
docs/: AI_SCHEMA_DESCRIPTOR.md  YAML_EXPORT_GUIDE.md  data_generation.md  datahub.md  development.md  ingestion.md  structured_properties.md
ingest_configs/: ingest_accounts_db.yml  ingest_compliance_db.yml  ingest_customer_db.yml  ingest_employees_db.yml  ingest_insurance_db.yml  ingest_loans_db.yml
requirements/: data_generation.md
